@@ -50,7 +50,8 @@ bootRun {
     jvmArgs = ['-server',
                '-Xms250m',
                '-Xmx500m',
-               '-XX:+UseG1GC',
+               '-XX:+UseZGC',
+               '-XX:+ZGenerational',
                '-XX:+HeapDumpOnOutOfMemoryError',
                '-XX:MaxGCPauseMillis=200',
                '-XX:ParallelGCThreads=20',
